--- a/README
+++ b/README
@@ -7,3 +7,5 @@ Noha Ibrahim
 Martin Heusse
 
 Code du site de l'Echoppe d'ici et d'ailleurs
+
+Pour commencer, regler correctement les variables dans le fichier constants.php, à partir du fichier constants-template.php
